# ai-investment-advisor

./: .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  LICENSE  README.md  pyproject.toml
ai_investment_advisor/: __init__.py  cli.py
ai_investment_advisor/agents/: __init__.py  compliance_reviewer.py  execution_agent.py  multi_task_agent.py
ai_investment_advisor/core/: __init__.py  config.py  supervisor.py
ai_investment_advisor/tools/: __init__.py  compliance_checker.py  market_data.py  portfolio_analyzer.py  risk_assessment.py  trade_simulator.py
examples/: sample_client_aggressive.json  sample_client_conservative.json  sample_client_moderate.json  sample_portfolio.json  test_system.py
